--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,8 @@ repository.web = http://github.com/gflohr/Chess-Position.git
 repository.type = git
 [BuildFile / README.pod]
 command = pandoc --from=gfm --to=markdown_strict README.md | perl -MMarkdown::To::POD -e 'print Markdown::To::POD::markdown_to_pod(join "", <>)' >{{$target}}
+[BuildFile / lib/Chess/Position/Tutorial.pod]
+command = pandoc --from=gfm --to=markdown_strict Tutorial.md | perl -MMarkdown::To::POD -e 'print Markdown::To::POD::markdown_to_pod(join "", <>)' >{{$target}}
 [GatherFile]
 filename = README.pod
 [CopyFilesFromBuild]
