--- a/dist.ini
+++ b/dist.ini
@@ -43,6 +43,7 @@ command = pandoc --from=gfm --to=markdown_strict README.md | perl -MMarkdown::To
 command = pandoc --from=gfm --to=markdown_strict Tutorial.md | perl -MMarkdown::To::POD -e 'print Markdown::To::POD::markdown_to_pod(join "", <>)' >{{$target}}
 [GatherFile]
 filename = README.pod
+filename = lib/Chess/Position/Tutorial.pod
 [CopyFilesFromBuild]
 copy = LICENSE
 copy = MANIFEST
