--- a/dist.ini
+++ b/dist.ini
@@ -41,8 +41,10 @@ repository.type = git
 command = pandoc --from=gfm --to=markdown_strict README.md | perl -MMarkdown::To::POD -e 'print Markdown::To::POD::markdown_to_pod(join "", <>)' >{{$target}}
 [GatherFile]
 filename = README.pod
-filename = lib/Chess/Position/Tutorial.pod
 [CopyFilesFromBuild]
 copy = LICENSE
 copy = MANIFEST
 copy = Makefile.PL
+copy = t/author-critic.t
+copy = t/author-pod-coverage.t
+copy = t/author-pod-syntax.t
