--- a/dist.ini
+++ b/dist.ini
@@ -25,9 +25,11 @@ format=%v  %{yyyy-MM-dd}d
 exclude_filename = LICENSE
 exclude_filename = MANIFEST
 exclude_filename = Makefile.PL
+exclude_filename = t/author-critic.t
+exclude_filename = t/author-pod-coverage.t
+exclude_filename = t/author-pod-syntax.t
 [Test::Perl::Critic]
 [Test::CPAN::Changes]
-[PodCoverageTests]
 [PodSyntaxTests]
 [AutoPrereqs]
 [MetaJSON]
@@ -46,5 +48,4 @@ copy = LICENSE
 copy = MANIFEST
 copy = Makefile.PL
 copy = t/author-critic.t
-copy = t/author-pod-coverage.t
 copy = t/author-pod-syntax.t
