test for 64-bit integers

--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ copyright_holder = Guido Flohr
 -bundle = @Basic
 -remove = Readme
 -remove = GatherDir
+-remove = MakeMaker
 [@Git]
 [PkgVersion]
 [NextRelease]
@@ -28,6 +29,9 @@ exclude_filename = Makefile.PL
 exclude_filename = t/author-critic.t
 exclude_filename = t/author-pod-coverage.t
 exclude_filename = t/author-pod-syntax.t
+[MakeMaker::Awesome]
+header_file = EMM-include.pm
+enum_version = 7.1101
 [Test::Perl::Critic]
 [Test::CPAN::Changes]
 [PodSyntaxTests]
