renamed to Chess::Plisco

--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@
 ; to Public License, Version 2, as published by Sam Hocevar. See
 ; http://www.wtfpl.net/ for more details.
 
-name    = Chess-Position
+name    = Chess-Plisco
 version = 0.1
 author  = Guido Flohr <guido.flohr@cantanea.com>
 license = WTFPL_2
@@ -38,10 +38,10 @@ enum_version = 7.1101
 [AutoPrereqs]
 [MetaJSON]
 [MetaResources]
-homepage = http://www.guido-flohr.net/en/projects#chess-position
-bugtracker.web = https://github.com/gflohr/Chess-Position/issues
-repository.url = git://github.com/gflohr/Chess-Position.git
-repository.web = http://github.com/gflohr/Chess-Position.git
+homepage = http://www.guido-flohr.net/en/projects#chess-plisco
+bugtracker.web = https://github.com/gflohr/Chess-Plisco/issues
+repository.url = git://github.com/gflohr/Chess-Plisco.git
+repository.web = http://github.com/gflohr/Chess-Plisco.git
 repository.type = git
 [BuildFile / README.pod]
 command = pandoc --from=gfm --to=markdown_strict README.md | perl -MMarkdown::To::POD -e 'print Markdown::To::POD::markdown_to_pod(join "", <>)' >{{$target}}
