--- a/dist.ini
+++ b/dist.ini
@@ -8,7 +8,7 @@
 ; http://www.wtfpl.net/ for more details.
 
 name    = Chess-Plisco
-version = 0.2
+version = 0.3
 author  = Guido Flohr <guido.flohr@cantanea.com>
 license = WTFPL_2
 copyright_holder = Guido Flohr
@@ -26,9 +26,11 @@ format=%v  %{yyyy-MM-dd}d
 exclude_filename = LICENSE
 exclude_filename = MANIFEST
 exclude_filename = Makefile.PL
+exclude_filename = expand-macros
 exclude_filename = t/author-critic.t
 exclude_filename = t/author-pod-coverage.t
 exclude_filename = t/author-pod-syntax.t
+exclude_match = ^performance/.*
 [MakeMaker::Awesome]
 header_file = EMM-include.pm
 enum_version = 7.1101
@@ -45,6 +47,8 @@ repository.web = http://github.com/gflohr/Chess-Plisco.git
 repository.type = git
 [BuildFile / README.pod]
 command = pandoc --from=gfm --to=markdown_strict README.md | perl -MMarkdown::To::POD -e 'print Markdown::To::POD::markdown_to_pod(join "", <>)' >{{$target}}
+[Run::AfterBuild]
+run = ./expand-macros %d
 [GatherFile]
 filename = README.pod
 [CopyFilesFromBuild]
