fix copyright date

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; Copyright (C) 2021 Guido Flohr <guido.flohr@cantanea.com>,
+; Copyright (C) 2021-2025 Guido Flohr <guido.flohr@cantanea.com>,
 ; all rights reserved.
 
 ; This program is free software. It comes without any warranty, to
@@ -22,6 +22,9 @@ copyright_holder = Guido Flohr
 [PkgVersion]
 [NextRelease]
 format=%v  %{yyyy-MM-dd}d
+[Encoding]
+encoding = bytes
+match = ^t/syzygy/
 [Git::GatherDir]
 exclude_filename = LICENSE
 exclude_filename = MANIFEST
