--- a/dist.ini
+++ b/dist.ini
@@ -8,7 +8,7 @@
 ; http://www.wtfpl.net/ for more details.
 
 name    = Chess-Plisco
-version = 0.6
+version = v0.7.0
 author  = Guido Flohr <guido.flohr@cantanea.com>
 license = WTFPL_2
 copyright_holder = Guido Flohr
