rename header file

--- a/dist.ini
+++ b/dist.ini
@@ -35,7 +35,7 @@ exclude_filename = t/author-pod-coverage.t
 exclude_filename = t/author-pod-syntax.t
 exclude_match = ^performance/.*
 [MakeMaker::Awesome]
-header_file = EMM-include.pm
+header_file = EMM-header.pm
 enum_version = 7.1101
 [Test::Perl::Critic]
 [Test::CPAN::Changes]
