--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ exclude_filename = LICENSE
 exclude_filename = MANIFEST
 exclude_filename = Makefile.PL
 exclude_filename = expand-macros
+exclude_filename = run-tests
 exclude_filename = t/author-critic.t
 exclude_filename = t/author-pod-coverage.t
 exclude_filename = t/author-pod-syntax.t
