--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        # FIXME! Test why Sys::Mmap cannot be installed in the pipeline.
+        os: ['ubuntu-latest', 'macos-latest']
         # perl-version should always be one behind the latest version.  The
         # latest version is tested in the workflow triggered by the push.
         perl-version:
