--- a/.github/workflows/ci-quick.yaml
+++ b/.github/workflows/ci-quick.yaml
@@ -42,6 +42,8 @@ jobs:
 
     - name: Install
       run: cpanm --notest --verbose .
+    - name: Expand Macros
+      run: ./expand-macros blib
 
     - name: Test
-      run: prove -l
+      run: prove -b
