--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,8 @@ jobs:
     - name: Install
       run: cpanm --notest --verbose .
 
-    - name: Test
-      run: prove -l
+    - name: Expand Macros
+      run: ./expand-macros blib
 
+    - name: Test
+      run: prove -b
