force re-run of pipelines

--- a/.github/workflows/ci-quick.yaml
+++ b/.github/workflows/ci-quick.yaml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Install
       run: cpanm --notest --verbose .
-    - name: Expand Macros
+    - name: Expand macros
       run: ./expand-macros blib
 
     - name: Test
